@@ -8,6 +8,7 @@ import net.kyori.adventure.title.TitlePart;
 import org.bukkit.*;
 import org.bukkit.entity.ItemFrame;
 import org.bukkit.entity.Player;
+import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.bukkit.scheduler.BukkitTask;
@@ -16,8 +17,8 @@ import org.macausmp.sportsday.CompetitionListener;
 import org.macausmp.sportsday.SportsDay;
 import org.macausmp.sportsday.customize.CustomizeMusickit;
 import org.macausmp.sportsday.customize.PlayerCustomize;
-import org.macausmp.sportsday.gui.competition.CompetitionInfoGUI;
-import org.macausmp.sportsday.util.CompetitorData;
+import org.macausmp.sportsday.gui.competition.CompetitionConsoleGUI;
+import org.macausmp.sportsday.util.ContestantData;
 import org.macausmp.sportsday.util.ItemUtil;
 import org.macausmp.sportsday.util.TextUtil;
 
@@ -25,7 +26,7 @@ import java.util.*;
 
 public abstract class AbstractEvent implements IEvent {
     protected static final SportsDay PLUGIN = SportsDay.getInstance();
-    private static final List<BukkitTask> EVENT_TASKS = new ArrayList<>();
+    private static final Set<BukkitTask> EVENT_TASKS = new HashSet<>();
     private static final Map<Player, IEvent> PRACTICE = new HashMap<>();
     private final String id;
     private final Component name;
@@ -33,10 +34,11 @@ public abstract class AbstractEvent implements IEvent {
     private final Location location;
     private final World world;
     private Status status = Status.IDLE;
-    private final Collection<CompetitorData> competitors = new HashSet<>();
-    private final Map<UUID, CustomizeMusickit> competitorToMusickit = new HashMap<>();
-    public static final NamespacedKey IN_GAME = new NamespacedKey(PLUGIN, "in_game");
     private long time;
+    private final Collection<ContestantData> contestants = new HashSet<>();
+    private final List<ContestantData> leaderboard = new ArrayList<>();
+    private final Map<UUID, PersistentDataContainer> contestantToMusickit = new HashMap<>();
+    public static final NamespacedKey IN_GAME = new NamespacedKey(PLUGIN, "in_game");
 
     public AbstractEvent(String id) {
         this.id = id;
@@ -77,8 +79,32 @@ public abstract class AbstractEvent implements IEvent {
     }
 
     @Override
+    public final Status getStatus() {
+        return status;
+    }
+
+    /**
+     * Set the current event status.
+     * @param status new status
+     */
+    protected final void setStatus(Status status) {
+        this.status = status;
+        CompetitionConsoleGUI.updateGUI();
+    }
+
+    @Override
     public final long getLastTime() {
         return time;
+    }
+
+    @Override
+    public final Collection<ContestantData> getContestants() {
+        return contestants;
+    }
+
+    @Override
+    public final List<ContestantData> getLeaderboard() {
+        return leaderboard;
     }
 
     @Override
@@ -91,13 +117,14 @@ public abstract class AbstractEvent implements IEvent {
         PRACTICE.clear();
         EVENT_TASKS.forEach(BukkitTask::cancel);
         EVENT_TASKS.clear();
-        competitors.clear();
+        contestants.clear();
         getLeaderboard().clear();
         setStatus(Status.COMING);
-        competitors.addAll(Competitions.getOnlineCompetitors());
-        competitors.forEach(data -> {
+        contestants.addAll(Competitions.getOnlineContestants());
+        contestants.forEach(data -> {
             Player p = data.getPlayer();
-            if (!SportsDay.REFEREE.hasPlayer(p)) p.getInventory().clear();
+            if (!SportsDay.REFEREES.hasPlayer(p))
+                p.getInventory().clear();
             p.clearActivePotionEffects();
             p.setFireTicks(0);
             p.setGameMode(GameMode.ADVENTURE);
@@ -105,15 +132,17 @@ public abstract class AbstractEvent implements IEvent {
             p.getInventory().setItem(4, ItemUtil.SPRAY);
             p.setBedSpawnLocation(location, true);
             p.teleport(location);
-            competitorToMusickit.put(data.getUUID(), PlayerCustomize.getMusickit(p));
+            contestantToMusickit.put(data.getUUID(), p.getPersistentDataContainer());
         });
         addRunnable(new BukkitRunnable() {
             int i = PLUGIN.getConfig().getInt("ready_time");
             @Override
             public void run() {
                 if (i % 5 == 0 || (i <= 5 && i > 0)) {
-                    Bukkit.getServer().sendActionBar(Component.translatable("event.start.countdown").args(Component.text(i)).color(NamedTextColor.GREEN));
-                    Bukkit.getServer().playSound(Sound.sound(Key.key("minecraft:entity.arrow.hit_player"), Sound.Source.MASTER, 1f, 0.5f));
+                    Bukkit.getServer().sendActionBar(Component.translatable("event.start.countdown")
+                            .args(Component.text(i)).color(NamedTextColor.GREEN));
+                    Bukkit.getServer().playSound(Sound.sound(Key.key("minecraft:entity.arrow.hit_player"),
+                            Sound.Source.MASTER, 1f, 0.5f));
                 }
                 if (i-- == 0) {
                     start();
@@ -121,7 +150,8 @@ public abstract class AbstractEvent implements IEvent {
                 }
             }
         }.runTaskTimer(PLUGIN, 0L, 20L));
-        Bukkit.broadcast(Component.translatable("event.ready.broadcast").args(name, Component.text(PLUGIN.getConfig().getInt("ready_time"))).color(NamedTextColor.GREEN));
+        Bukkit.broadcast(Component.translatable("event.ready.broadcast")
+                .args(name, Component.text(PLUGIN.getConfig().getInt("ready_time"))).color(NamedTextColor.GREEN));
         Bukkit.broadcast(Component.translatable("event.rule." + id));
         onSetup();
         PLUGIN.getComponentLogger().info(Component.translatable("console.competition.coming").args(name));
@@ -142,11 +172,12 @@ public abstract class AbstractEvent implements IEvent {
         EVENT_TASKS.forEach(BukkitTask::cancel);
         if (!force) {
             if (!getLeaderboard().isEmpty()) {
-                OfflinePlayer mvp = getLeaderboard().get(0).getOfflinePlayer();
-                CustomizeMusickit musickit = competitorToMusickit.get(mvp.getUniqueId());
+                OfflinePlayer mvp = getLeaderboard().getFirst().getOfflinePlayer();
+                CustomizeMusickit musickit = PlayerCustomize.getMusickit(contestantToMusickit.get(mvp.getUniqueId()));
                 if (musickit != null) {
                     Bukkit.getServer().playSound(Sound.sound(musickit.getKey(), Sound.Source.MASTER, 1f, 1f));
-                    Bukkit.getServer().sendActionBar(Component.translatable("broadcast.play_mvp_anthem").args(Component.text(Objects.requireNonNull(mvp.getName())).color(NamedTextColor.YELLOW), musickit.getName()));
+                    Bukkit.getServer().sendActionBar(Component.translatable("broadcast.play_mvp_anthem")
+                            .args(Component.text(Objects.requireNonNull(mvp.getName())).color(NamedTextColor.YELLOW), musickit.getName()));
                 }
             }
             addRunnable(new BukkitRunnable() {
@@ -171,7 +202,7 @@ public abstract class AbstractEvent implements IEvent {
                 p.teleport(location);
                 p.setGameMode(GameMode.ADVENTURE);
             });
-            Competitions.getOnlineCompetitors().forEach(d -> {
+            Competitions.getOnlineContestants().forEach(d -> {
                 Player p = d.getPlayer();
                 p.getInventory().clear();
                 PlayerCustomize.suitUp(p);
@@ -179,53 +210,37 @@ public abstract class AbstractEvent implements IEvent {
                 p.getInventory().setItem(4, ItemUtil.CUSTOMIZE);
             });
             getWorld().getEntitiesByClass(ItemFrame.class).forEach(e -> {
-                if (e.getPersistentDataContainer().has(CompetitionListener.GRAFFITI)) e.remove();
+                if (e.getPersistentDataContainer().has(CompetitionListener.GRAFFITI))
+                    e.remove();
             });
         }
     }
 
     /**
-     * Called when the event sets up
+     * Called when the event sets up.
      * @see #setup()
      */
     protected abstract void onSetup();
 
     /**
-     * Called when the event starts
+     * Called when the event starts.
      * @see #start()
      */
     protected abstract void onStart();
 
     /**
-     * Called when the event ends
+     * Called when the event ends.
      * @see #end(boolean)
      */
     protected abstract void onEnd(boolean force);
 
     @Override
-    public final Status getStatus() {
-        return status;
-    }
-
-    /**
-     * Set the current event status
-     * @param status new status
-     */
-    protected final void setStatus(Status status) {
-        this.status = status;
-        CompetitionInfoGUI.updateGUI();
-    }
-
-    public final Collection<CompetitorData> getCompetitors() {
-        return competitors;
-    }
-
-    @Override
-    public void onDisqualification(@NotNull CompetitorData competitor) {
-        competitors.remove(competitor);
-        getLeaderboard().remove(competitor);
-        Player p = competitor.getPlayer();
-        if (p.isInsideVehicle()) Objects.requireNonNull(p.getVehicle()).remove();
+    public void onDisqualification(@NotNull ContestantData contestant) {
+        contestants.remove(contestant);
+        getLeaderboard().remove(contestant);
+        Player p = contestant.getPlayer();
+        if (p.isInsideVehicle())
+            Objects.requireNonNull(p.getVehicle()).remove();
         p.clearActivePotionEffects();
         p.setFireTicks(0);
         p.getInventory().clear();
@@ -236,77 +251,78 @@ public abstract class AbstractEvent implements IEvent {
     }
 
     @Override
-    public void joinPractice(@NotNull Player p) {
-        PRACTICE.put(p, this);
-        p.clearActivePotionEffects();
-        p.setFireTicks(0);
-        p.getInventory().clear();
-        PlayerCustomize.suitUp(p);
-        p.getInventory().setItem(8, ItemUtil.LEAVE_PRACTICE);
-        p.setBedSpawnLocation(location, true);
-        p.teleport(location);
-        p.sendMessage(Component.translatable("competitor.practice.teleport.venue").args(name));
-        onPractice(p);
-        p.playSound(Sound.sound(Key.key("minecraft:entity.arrow.hit_player"), Sound.Source.MASTER, 1f, 1f));
+    public void joinPractice(@NotNull Player player) {
+        PRACTICE.put(player, this);
+        player.clearActivePotionEffects();
+        player.setFireTicks(0);
+        player.getInventory().clear();
+        PlayerCustomize.suitUp(player);
+        player.getInventory().setItem(8, ItemUtil.LEAVE_PRACTICE);
+        player.setBedSpawnLocation(location, true);
+        player.teleport(location);
+        player.sendMessage(Component.translatable("contestant.practice.teleport.venue").args(name));
+        onPractice(player);
+        player.playSound(Sound.sound(Key.key("minecraft:entity.arrow.hit_player"), Sound.Source.MASTER, 1f, 1f));
     }
 
     /**
-     * Called when a player participates in practice
-     * @param p Who going to practice this event
+     * Called when a player participates in practice.
+     * @param player who going to practice this event
      */
-    protected abstract void onPractice(@NotNull Player p);
+    protected abstract void onPractice(@NotNull Player player);
 
     /**
-     * Let players leave this practice
-     * @param p Who leave practicing this event
+     * Let players leave this practice.
+     * @param player who leave practicing this event
      */
-    public static void leavePractice(@NotNull Player p) {
-        if (!PRACTICE.containsKey(p)) return;
-        PRACTICE.remove(p);
-        if (p.isInsideVehicle()) Objects.requireNonNull(p.getVehicle()).remove();
-        p.clearActivePotionEffects();
-        p.setFireTicks(0);
-        p.getInventory().clear();
-        PlayerCustomize.suitUp(p);
-        p.getInventory().setItem(0, ItemUtil.MENU);
-        p.getInventory().setItem(4, ItemUtil.CUSTOMIZE);
-        p.setBedSpawnLocation(p.getWorld().getSpawnLocation(), true);
-        p.teleport(p.getWorld().getSpawnLocation());
+    public static void leavePractice(@NotNull Player player) {
+        if (!PRACTICE.containsKey(player)) return;
+        PRACTICE.remove(player);
+        if (player.isInsideVehicle())
+            Objects.requireNonNull(player.getVehicle()).remove();
+        player.clearActivePotionEffects();
+        player.setFireTicks(0);
+        player.getInventory().clear();
+        PlayerCustomize.suitUp(player);
+        player.getInventory().setItem(0, ItemUtil.MENU);
+        player.getInventory().setItem(4, ItemUtil.CUSTOMIZE);
+        player.setBedSpawnLocation(player.getWorld().getSpawnLocation(), true);
+        player.teleport(player.getWorld().getSpawnLocation());
     }
 
     /**
-     * Check if player is practicing
-     * @param p Who going to be checked
-     * @return True if player is practicing
+     * Check if player is practicing.
+     * @param player who going to be checked
+     * @return {@code True} if player is practicing
      */
-    public static boolean inPractice(Player p) {
-        return PRACTICE.containsKey(p);
+    public static boolean inPractice(Player player) {
+        return PRACTICE.containsKey(player);
     }
 
     /**
-     * Check if player is practicing at specified event
-     * @param p Who going to be checked
-     * @param event The specified event
-     * @return True if player is practicing at specified event
-     * @param <T> The event type
+     * Check if player is practicing at specified event.
+     * @param player who going to be checked
+     * @param event the specified event
+     * @return {@code True} if player is practicing at specified event
+     * @param <T> the event type
      */
-    public static <T extends IEvent> boolean inPractice(Player p, T event) {
-        return PRACTICE.containsKey(p) && PRACTICE.get(p).equals(event);
+    public static <T extends IEvent> boolean inPractice(Player player, T event) {
+        return PRACTICE.containsKey(player) && PRACTICE.get(player) == event;
     }
 
     /**
-     * Get the event the player is practice on
-     * @param p Who is practicing
-     * @return Event the player is practice on
-     * @param <T> The event type
+     * Get the event the player is practice on.
+     * @param player who is practicing
+     * @return event the player is practice on
+     * @param <T> the event type
      */
-    public static <T extends IEvent> T getPracticeEvent(Player p) {
+    public static <T extends IEvent> T getPracticeEvent(Player player) {
         //noinspection unchecked
-        return (T) PRACTICE.get(p);
+        return (T) PRACTICE.get(player);
     }
 
     /**
-     * Add a {@link BukkitTask} to this event
+     * Add a {@link BukkitTask} to this event.
      * @param task {@link BukkitTask} to add
      */
     protected final BukkitTask addRunnable(BukkitTask task) {
